Fix instance bottom bar overlapping main content

--- a/static/css/webvirtcloud.css
+++ b/static/css/webvirtcloud.css
@@ -151,3 +151,7 @@ p {
     color:#ffffff;
     background-color:#000099;
 }
+
+.bottom-bar-margin {
+    margin-top: 65px;
+}
